[Picture-in-Picture] Reset MediaPlayerId when user closes PiP window.

This makes sure the MediaPlayerId of the Picture-in-Picture video is
reset when user closes Picture-in-Picture window manually or when user
requests Picture-in-Picture several times.

Bug: 879592, 889011
Change-Id: I3ceea8de7fc5ee0e2c81268154daaa065b29b92b
Reviewed-on: https://chromium-review.googlesource.com/1236276
Reviewed-by: Jochen Eisinger <jochen@chromium.org>
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Commit-Queue: François Beaufort <beaufort.francois@gmail.com>
Cr-Commit-Position: refs/heads/master@{#594441}
Former-commit-id: 831a1ec9ca49586b323d13d4e9b11c355deff761